# behind-the-bastards

./: .dockerignore  .gitignore  Dockerfile  README.md  SECURITY.md  mise.toml  pyproject.toml
.github/: CONTRIBUTING.md
.playwright-cli/: page-2026-04-21T11-30-43-140Z.yml  page-2026-04-21T11-35-50-729Z.yml
btb_browser/: __init__.py  __main__.py  data.py  transcripts.py  web.py
episodes/: 100695753.json  100785313.json  100870636.json  100947827.json  101042094.json  101100156.json  101214668.json  101309382.json  101384404.json  101483642.json  101567850.json  101660358.json  101725720.json  101819157.json  101895754.json  101993663.json  102083774.json  102154123.json  102251387.json  102342182.json  102420080.json  102526199.json  102616716.json  102697562.json  102740713.json  102783386.json  102834082.json  102882999.json  102941231.json  102987806.json  103117303.json  103226693.json  103311117.json  103425853.json  103540303.json  103611471.json  103724914.json  103824705.json  103908297.json  104020806.json  (+1117 more)
scripts/: archive_btb.py  migrate_transcripts_to_zstd.py
static/: style.css
templates/: detail.html  index.html
tests/: test_archive_btb.py  test_browser_cli.py  test_browser_data.py  test_browser_smoke.py  test_browser_web.py  test_transcript_storage.py
transcripts/: 100695753.srt.zst  100785313.srt.zst  100870636.srt.zst  100947827.srt.zst  101042094.srt.zst  101100156.srt.zst  101214668.srt.zst  101309382.srt.zst  101384404.srt.zst  101483642.srt.zst  101567850.srt.zst  101660358.srt.zst  101725720.srt.zst  101819157.srt.zst  101895754.srt.zst  (+1136 more)
(+10 files in other folders)
