[project]
name = "btb_browser"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.136.0",
    "httpx>=0.28.1",
    "jinja2>=3.1.6",
    "uvicorn>=0.44.0",
    "zstandard>=0.25.0",
]

[dependency-groups]
dev = [
    "playwright>=1.58.0",
    "pytest>=9.0.3",
    "ruff>=0.15.11",
    "ty>=0.0.31",
]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
